Fix greeting spacing/fonts

--- a/client/src/v2/styles_v2/greeting.module.css
+++ b/client/src/v2/styles_v2/greeting.module.css
@@ -6,7 +6,8 @@
 }
 
 .hello {
-  font-size: 300%;
+  font-size: 60px;
+  /* font-size: 300%; */
   font-weight: 300;
   color: #46bbfc;
   margin: 0;
@@ -17,7 +18,8 @@
 
 .name {
   /* color: white; */
-  font-size: 500%;
+  font-size: 100px;
+  /* font-size: 500%; */
   margin: 0;
   padding: none;
   color: #053742;
@@ -26,7 +28,8 @@
 }
 
 .subtitle {
-  font-size: 400%;
+  /* font-size: 400%; */
+  font-size: 80px;
   font-weight: 400;
   font-family: Arial, Helvetica, sans-serif;
   color: #a3dafa;
@@ -54,18 +57,61 @@
   }
 }
 
-/* <1050px screen width ——————————————————————————————————————————————————————————*/
-@media (max-width: 1050px) {
+/* <1400px screen width ——————————————————————————————————————————————————————————*/
+@media (min-width: 1600px) {
+  .greeting_container {
+    margin-top: 150px;
+  }
+
   .hello {
-    font-size: 250%;
+    font-size: 50px;
+  }
+  .name {
+    font-size: 100px;
+  }
+  .subtitle {
+    font-size: 85px;
+  }
+}
+
+/* <1400px screen width ——————————————————————————————————————————————————————————*/
+@media (max-width: 1400px) {
+  .greeting_container {
+    margin-top: 10vh;
+  }
+}
+
+/* <1300px screen width ——————————————————————————————————————————————————————————*/
+@media (max-width: 1300px) {
+  .greeting_container {
+    margin-top: 150px;
+  }
+
+  .hello {
+    font-size: 50px;
   }
 
   .name {
-    font-size: 450%;
+    font-size: 80px;
   }
 
   .subtitle {
-    font-size: 350%;
+    font-size: 65px;
+  }
+}
+
+/* <1050px screen width ——————————————————————————————————————————————————————————*/
+@media (max-width: 1050px) {
+  .hello {
+    font-size: 60px;
+  }
+
+  .name {
+    font-size: 75px;
+  }
+
+  .subtitle {
+    font-size: 60px;
   }
 
   .sidelinks_container {
@@ -98,15 +144,15 @@
 /* <1000px screen width ——————————————————————————————————————————————————————————*/
 @media (max-width: 1000px) {
   .hello {
-    font-size: 180%;
+    font-size: 40px;
   }
 
   .name {
-    font-size: 380%;
+    font-size: 65px;
   }
 
   .subtitle {
-    font-size: 280%;
+    font-size: 50px;
   }
 
   .sidelinks_container {
@@ -126,40 +172,45 @@
   }
 
   .hello {
-    font-size: 170%;
-    margin-bottom: 2%;
+    font-size: 40px;
+    margin-bottom: 20px;
   }
 
   .name {
-    font-size: 350%;
-    margin-bottom: 2%;
+    font-size: 55px;
+    margin-bottom: 20px;
+  }
+
+  .last_name {
+    /* display: none; */
   }
 
   .subtitle {
-    font-size: 300%;
-    margin-bottom: 2%;
+    font-size: 45px;
+    margin-bottom: 20px;
   }
 
   .subtext_container {
     display: flex;
     flex-direction: column;
-    width: 70%;
+    width: 90%;
     margin: 5% auto 0 0;
     animation: fadein 3s;
   }
 
   .subtext {
-    font-size: 150%;
-    color: #95d2f5;
+    font-size: 35px;
+    color: #053742;
+    font-weight: 200;
   }
 
   .subtext_link {
     font-size: 100%;
     font-weight: 600;
     color: white;
-    width: 30%;
+    width: 450px;
     margin: 5% 0;
-    padding: 5%;
+    padding: 7%;
     background-color: #a3dafab0;
     border: 1px solid #46bbfc;
     border-radius: 5px;
@@ -181,6 +232,10 @@
   .subtitle {
     font-size: 250%;
   }
+
+  .subtext_link {
+    width: 400px;
+  }
 }
 
 /* <700px screen width ——————————————————————————————————————————————————————————*/
@@ -190,11 +245,11 @@
   }
 
   .name {
-    font-size: 300%;
+    font-size: 42px;
   }
 
   .subtitle {
-    font-size: 250%;
+    font-size: 35px;
   }
 }
 
@@ -211,6 +266,9 @@
   .subtitle {
     font-size: 200%;
   }
+  .subtext {
+    font-size: 30px;
+  }
 }
 
 /* <550px screen width ——————————————————————————————————————————————————————————*/
@@ -220,15 +278,19 @@
   }
 
   .name {
-    font-size: 220%;
+    font-size: 34px;
   }
 
   .subtitle {
-    font-size: 180%;
+    font-size: 28px;
   }
 
   .subtext {
-    font-size: 130%;
+    font-size: 25px;
+  }
+
+  .subtext_link {
+    width: 350px;
   }
 }
 
@@ -241,15 +303,15 @@
 /* <480px screen width ——————————————————————————————————————————————————————————*/
 @media (max-width: 480px) {
   .hello {
-    font-size: 120%;
+    font-size: 25px;
   }
 
   .name {
-    font-size: 200%;
+    font-size: 30px;
   }
 
   .subtitle {
-    font-size: 150%;
+    font-size: 25px;
   }
 
   .subtext_container {
@@ -257,7 +319,11 @@
   }
 
   .subtext {
-    font-size: 120%;
+    font-size: 21px;
+  }
+
+  .subtext_link {
+    width: 300px;
   }
 }
 
